[package]
name = "matasano"
version = "0.0.1"
authors = [ "Kyle Aleshire <kjaleshire@gmail.com>" ]

[lib]
name = "matasano"
path = "src/lib.rs"
test = false

[dependencies]
base64 = "0.9.1"
hex = "0.3.2"
openssl = "0.10.8"
rand = "0.3.14"
serde = "1.0.63"
serde_derive = "1.0.63"
serde_urlencoded = "0.5.1"
